annex about tools

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1009,12 +1009,12 @@ This has been left for future work.
 %	
 6.7.(f)	& 
 Proposals should discuss the role of APIs.	&
-TODO: Ontohub, API4KB
+The role of APIs is discussed in annex \ref{a:tools}. 
    \\ \hline
 %	
 6.7.(g)	& 
 Proposals should discuss availability and use of tools.	&
-TODO: Ontohub, Hets
+Tools for DOL are discussed in annex \ref{a:tools}. 
    \\ \hline
 %	
 6.7.(h)	& 
@@ -6453,9 +6453,90 @@ pos=h,
 \infannex{Abstract syntax specified as an SMOF meta model}\label{a:MOF}
 <The SMOF meta model is in preparation.>
 
+\infannex{Tools for DOL}\label{a:tools}
+
+\ssclause{The Heterogeneous Tool Set (Hets)}\label{a:hets}
 
 
+\ssclause{Ontohub, Modelhub, Spechub}\label{a:ontohub}
 
+Ontohub/Modelhub/Spechub is a repository engine for managing focused
+OMS, OMS networks and OMS mappings written in DOL and DOL-conformant
+languages.  It supports a wide range of OMS languages and language
+translations.
+
+Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
+OMS in various languages via a web frontend, 
+see \url{https://ontohub.org}, \url{https://modelhub.info} and \url{https://spechub.org}.
+Ontohub/Modelhub/Spechub is open source under GNU AGPL 3.0 license,  the sources are available at the following URL 
+\url{https://github.com/ontohub/ontohub}.
+
+Namely, Ontohub/Modelhub/Spechub enjoys the following distinctive features:
+\begin{itemize}
+  \item OMS can be organized in multiple repositories, each
+     with its own management of editing and ownership rights,
+  \item private repositories are possible,
+  \item version control of OMS is supported via interfacing
+   the Git version control system,
+  \item OMS can be edited both via the browser and locally with any
+  editor (and in the latter case pushed via Git); Git will synchronize both editing approaches,
+  \item one and the same URL is used for referencing an OMS, downloading
+     it (for use with tools), and for user-friendly presentation in
+     the browser (i.e.\ Ontohub/Modelhub/Spechub is fully linked-data compliant)
+  \item modular and distributed OMS are specially supported,
+  \item OMS can not only be aligned (as in BioPortal and NeOn), but also be combined along alignments,
+  \item logical relations between OMS (interpretation of theories, conservative
+  extensions etc.) are supported,
+  \item support for a variety of OMS languages, in particular OWL, RDF, Common Logic \cite{iso24a}, first-order
+logic, and relational database schemes; (in preparation are: UML, F-logic, distributed description
+logics, $\mathcal{E}$-connections),
+  \item OMS can be translated to other OMS languages, and compared with
+   OMS in other languages,
+  \item heterogeneous OMS involving several languages can be built,
+  \item OMS languages and OMS language translations are first-class
+   citizens and are available as linked data.
+\end{itemize}
+
+Ontohub/Modelhub/Spechub is not a repository, but a semantic repository engine. This
+means that Ontohub/Modelhub/Spechub OMS are organized into repositories.
+The
+organisation into repositories has several advantages:
+\begin{itemize}
+\item
+ Firstly, repositories provide a certain structuring of OMS,
+ let it be thematically or organisational. Access rights can be given
+ to users or teams of users per repository. Typically, read access is
+ given to everyone, and write access only to a restricted set of users
+ and teams. However, also completely open world-writeable repositories
+ are possible, as well as private repositories visible only to a
+ restricted set of users and teams.  Since creation of repositories is
+ done easily with a few clicks, this supports a policy of many but
+ small repositories (which of course does not preclude the existence
+ of very large repositories). Note that also structuring within
+ repositories is possible, since each repository is a complete file
+ system tree.
+ 
+\item
+ Secondly, repositories are git repositories. Git is a popular
+ decentralised version control system. With any git client, the user
+ can clone a repository to her local hard disk, edit it
+ with any editor, and push the changes back to Ontohub/Modelhub/Spechub. Alternatively,
+ the web frontend can be used directly to edit OMS; pushing
+ will then be done automatically in the background. Parallel edits of
+ the same file are synchronized and merged via git; handling of
+ merge conflicts can be done with git merge tools.
+\item
+Thirdly, OMS can be searched globally in Ontohub/Modelhub/Spechub, or in
+specific repositories. Additionally, user-supplied metadata like
+categories, formality levels and purposes can be used for searching.
+\end{itemize}
+
+Ontohub/Modelhub/Spechub is linked-data compliant. This means that OMS are
+referenced by a unique URL of the form
+\url{https://ontohub.org/name-of-repository/path-within-repository}. Depending
+on the MIME type of the request, under this URL, the raw OMS file
+will be available, but also a HTML version for display in a browser, 
+an XML and a JSON version for processing with tools.
 
 
 %\infannex{Bibliography}
