more about Hets

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6455,15 +6455,34 @@ pos=h,
 
 \infannex{Tools for DOL}\label{a:tools}
 
-\ssclause{The Heterogeneous Tool Set (Hets)}\label{a:hets}
+\sclause{The Heterogeneous Tool Set (Hets)}\label{a:hets} The
+Heterogeneous Tool Set (Hets) is a parsing, analysis and proof tool
+for OMS, OMS networks and OMS mappings written in DOL and
+DOL-conformant languages.  It supports a wide range of OMS languages
+and language translations, in particular OWL, RDF, Common Logic,
+first-order logic and CASL. Support for MOF, UML class diagrams and
+state machines is in preparation.  Hets has been co-developed together
+with the DOL language presented in this standard, and has been used to
+test the examples. Hets has been connected to considerable number of
+proof tools like theorem provers, supporting various logics. Logics
+that are not directly supported by any proof tool can be supported
+indirectly, through a logic mapping into a tool-supported logic.
+\footnote {While the Hets parser should support the
+  current version of DOL as presented in this standard, tt can happen
+  that the most recent changes to the DOL syntax are not fully
+  supported by the Hets static analysis and proof support yet. This
+  will be fixed in the future. }
+
+Hets is open source, licensed under GPLv2 or higher. The sources are
+available at the following URL \url{https://github.com/spechub/hets}.
 
 
-\ssclause{Ontohub, Modelhub, Spechub}\label{a:ontohub}
+\sclause{Ontohub, Modelhub, Spechub}\label{a:ontohub}
 
 Ontohub/Modelhub/Spechub is a repository engine for managing focused
 OMS, OMS networks and OMS mappings written in DOL and DOL-conformant
-languages.  It supports a wide range of OMS languages and language
-translations.
+languages.  It supports the same range of OMS languages and language
+translations as Hets (indeed, Hets is used for analysing DOL files).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
 OMS in various languages via a web frontend, 
@@ -6471,7 +6490,7 @@ see \url{https://ontohub.org}, \url{https://modelhub.info} and \url{https://spec
 Ontohub/Modelhub/Spechub is open source under GNU AGPL 3.0 license,  the sources are available at the following URL 
 \url{https://github.com/ontohub/ontohub}.
 
-Namely, Ontohub/Modelhub/Spechub enjoys the following distinctive features:
+Ontohub/Modelhub/Spechub enjoys the following distinctive features:
 \begin{itemize}
   \item OMS can be organized in multiple repositories, each
      with its own management of editing and ownership rights,
@@ -6483,13 +6502,11 @@ Namely, Ontohub/Modelhub/Spechub enjoys the following distinctive features:
   \item one and the same URL is used for referencing an OMS, downloading
      it (for use with tools), and for user-friendly presentation in
      the browser (i.e.\ Ontohub/Modelhub/Spechub is fully linked-data compliant)
-  \item modular and distributed OMS are specially supported,
-  \item OMS can not only be aligned (as in BioPortal and NeOn), but also be combined along alignments,
+  \item modular and heterogeneous OMS are specially supported,
+  \item OMS can not only be aligned (as in BioPortal and NeOn), but also be combined along alignments (using DOL's \syntax{combine} construct),
   \item logical relations between OMS (interpretation of theories, conservative
   extensions etc.) are supported,
-  \item support for a variety of OMS languages, in particular OWL, RDF, Common Logic \cite{iso24a}, first-order
-logic, and relational database schemes; (in preparation are: UML, F-logic, distributed description
-logics, $\mathcal{E}$-connections),
+  \item support for a variety of OMS languages, 
   \item OMS can be translated to other OMS languages, and compared with
    OMS in other languages,
   \item heterogeneous OMS involving several languages can be built,
