proof of concept

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1068,7 +1068,9 @@ with DOL.
 \ednote{in 6.8(c), also mention at least UML class diagrams}
 
 \section{Proof of Concept}
-TODO: Hets, Ontoub. Mention that they are open source.
+Prototypical open source tools for DOL are already available, see
+annex \ref{a:tools}. It is expected that they will reach industrial
+strength within two or three years.
 
 \section{Changes to Adopted OMG Specifications}
 This specification proposes no changes to adopted OMG specifications.
