clause 7 intro revised

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2515,9 +2515,12 @@ The following people contributed directly to the development of this specificati
 \chapter{Goals and Usage Scenarios} \label{c:goal}
 
 
-There are many domains and applications which involve knowledge that is represented in different OMS. These OMS often represent the domain from different perspectives or for different purposes. Further, the OMS are often represented in different OMS languages (e.g., UML, OWL, or Common Logic), which have different computational properties. 
+Often, engineering tasks require the use of several different OMS, which represent knowledge about 
+a given domain or specify a given system from different perspectives or for different purposes.
+(E.g., a software engineer will typically use different OMS to model different aspects of a software
+ system,  including its behavior, its components, and its interactions with other systems.)  Further, the OMS are often represented in different OMS languages (e.g., UML class diagrams, OWL, or Common Logic), which may differ in style, expressivity, and different computational properties. 
 
-This heterogeneity leads to  several 
+The use of different OMS within the same context leads to  several 
 challenges in the design and deployment of OMS, which have been addressed by current research in 
 ontological engineering, formal software specification and formal modeling:
 \begin{itemize}
@@ -2529,8 +2532,8 @@ in which the OMS are axiomatized in different logical languages?
 \end{itemize}
 
 
-To illustrate these challenges, in this clause we present a set of usage scenarios that involve the representation of knowledge in more than one OMS. These scenarios are in the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
- the use of heterogeneous formal representations leads to interoperability challenges. 
+To illustrate these challenges, in this clause we present a set of usage scenarios that involve the use of more than one OMS. These scenarios are in the areas of ontology design, formal specification, and model-driven development. In spite of their many differences, they  all highlight one common theme:  
+ the use of multiple OMS leads to interoperability challenges. 
  %There  are ad-hoc solutions to these challenges, and specialized languages and tools are used in practice. 
 
 
